--- a/RelativeLayout/app/src/main/res/layout/activity_main.xml
+++ b/RelativeLayout/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
-	<TextView
-		android:layout_width="wrap_content"
+	<Button
+		android:id="@+id/button2"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		android:layout_alignParentStart="true"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentEnd="true"
+		android:layout_marginStart="-2dp"
+		android:layout_marginTop="509dp"
+		android:layout_marginEnd="2dp"
+		android:text="Bottom" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+	<Button
+		android:id="@+id/button"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentEnd="true"
+		android:layout_marginStart="-2dp"
+		android:layout_marginTop="3dp"
+		android:layout_marginEnd="2dp"
+		android:text="Top" />
+
+	<Button
+		android:id="@+id/button3"
+		android:layout_width="146dp"
+		android:layout_height="43dp"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentEnd="true"
+		android:layout_marginStart="0dp"
+		android:layout_marginTop="59dp"
+		android:layout_marginEnd="214dp"
+		android:text="Left Below Top" />
+
+	<Button
+		android:id="@+id/button4"
+		android:layout_width="181dp"
+		android:layout_height="45dp"
+		android:layout_alignParentStart="true"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentEnd="true"
+		android:layout_marginStart="181dp"
+		android:layout_marginTop="455dp"
+		android:layout_marginEnd="-2dp"
+		android:text="Right Above Bottom" />
+
+</RelativeLayout>
