--- a/Aplikasiku/app/src/main/res/layout/activity_reset_password.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_reset_password.xml
@@ -121,6 +121,6 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"
-		android:onClick="postChangePassword"
+		android:onClick="ckck"
 		/>
 </androidx.constraintlayout.widget.ConstraintLayout>
