--- a/Aplikasiku/app/src/main/res/layout/activity_success_login.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_success_login.xml
@@ -6,4 +6,34 @@
 	android:layout_height="match_parent"
 	tools:context=".SuccessLoginActivity">
 
+	<androidx.constraintlayout.Guideline
+		android:id="@+id/guideline"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintGuide_percent="0.5"
+		app:layout_constraintStart_toStartOf="parent" />
+
+	<ImageView
+		android:id="@+id/success_image"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="8dp"
+		android:src="@drawable/ic_succesfull_logo"
+		app:layout_constraintBottom_toTopOf="@+id/txt_success"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent" />
+
+	<TextView
+		android:id="@+id/txt_success"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:fontFamily="@font/montserrat_semi_bold"
+		android:text="Successful!!"
+		android:textSize="32sp"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="@+id/guideline" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
