--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,37 @@
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
+	<Button
+		android:id="@+id/button"
+		android:layout_width="201dp"
+		android:layout_height="353dp"
+		android:text="Button"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.0"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+
+	<Button
+		android:id="@+id/button2"
+		android:layout_width="209dp"
+		android:layout_height="354dp"
+		android:text="Button"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="1.0"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+
+	<Button
+		android:id="@+id/button3"
+		android:layout_width="412dp"
+		android:layout_height="361dp"
+		android:layout_marginTop="20dp"
+		android:text="Button"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="1.0"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/button" />
+
 	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
