--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
 	<Button
 		android:id="@+id/button"
-		android:layout_width="201dp"
-		android:layout_height="353dp"
+		android:layout_width="181dp"
+		android:layout_height="307dp"
 		android:text="Button"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.0"
@@ -18,8 +18,8 @@
 
 	<Button
 		android:id="@+id/button2"
-		android:layout_width="209dp"
-		android:layout_height="354dp"
+		android:layout_width="173dp"
+		android:layout_height="306dp"
 		android:text="Button"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="1.0"
@@ -28,22 +28,36 @@
 
 	<Button
 		android:id="@+id/button3"
-		android:layout_width="412dp"
-		android:layout_height="361dp"
-		android:layout_marginTop="20dp"
+		android:layout_width="360dp"
+		android:layout_height="313dp"
 		android:text="Button"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="1.0"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/button" />
+		app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 	<TextView
+		android:id="@+id/textView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="4dp"
 		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		app:layout_constraintTop_toBottomOf="@+id/button" />
+
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guideline"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		app:layout_constraintGuide_begin="20dp" />
+
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guideline3"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		app:layout_constraintGuide_begin="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
